# WaterGAP2

./: README.md  copyrightstatement.txt
source/: CMakeLists.txt  additionalOutputInputFile.cpp  additionalOutputInputFile.h  calcWaterTemp.cpp  calcWaterTemp.h  calib_basins.cpp  calib_basins.h  calib_param.cpp  calib_param.h  calibration.cpp  calibration.h  clcl.cpp  clcl.h  climate.cpp  climate.h  climateYear.cpp  climateYear.h  common.h  configFile.cpp  configFile.h  conversion.h  countryinfo.cpp  countryinfo.h  daily.cpp  daily.h  dailyprec.cpp  dailyprec.h  def.h  enKF2wghmState.cpp  enKF2wghmState.h  exception.h  exception_LICENCE.txt  extractsub.cpp  extractsub.h  geo.cpp  geo.h  glacierYear.cpp  glacierYear.h  globals.cpp  globals.h  (+50 more)
